--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
     <header class="container mx-auto">
       <!-- Nav ber start -->
       <nav>
-        <div class="navbar my-7">
-          <div class="navbar-start">
+        <div
+          class="flex flex-col justify-center items-center gap-5 md:flex md:justify-between md:items-center md:flex-row my-7"
+        >
+          <div class="flex items-center">
             <div class="dropdown">
               <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
                 <svg
@@ -129,7 +131,7 @@
               <li><a class="poppins text-base">Contact Us</a></li>
             </ul>
           </div>
-          <div class="navbar-end">
+          <div class="">
             <a
               class="btn bg-[#B68C5A] text-white rounded-lg font-semibold text-lg px-8 py-6 poppins"
               >Free Consultation</a
@@ -145,7 +147,7 @@
           style="background-image: url(./images/banner.png)"
         >
           <div class="hero-overlay"></div>
-          <div class="hero-content text-neutral-content text-center">
+          <div class="hero-content text-neutral-content text-center max-w-full">
             <div class="max-w-2xl my-19">
               <h1 class="mb-5 text-7xl font-extrabold eb-garamond">
                 We Provide Effective Legal Solutions
