footer section added

--- a/index.html
+++ b/index.html
@@ -585,5 +585,76 @@
         </div>
       </section>
     </main>
+
+    <!-- Footer section start -->
+    <footer class="bg-[#111111]">
+      <section class="container mx-auto">
+        <footer class="footer sm:footer-horizontal text-base-content p-10">
+          <nav class="text-white">
+            <img src="./images/logo.png" alt="" />
+            <p class="w-5/6 pt-8 poppins text-base font-normal text-[#cfcfcf]">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour.
+            </p>
+          </nav>
+          <nav class="text-[#cfcfcf] text-base poppins">
+            <h6
+              class="text-xl font-extrabold text-white mb-12 eb-garamond pr-6"
+            >
+              Usefull link
+            </h6>
+            <a class="link link-hover">Homes</a>
+            <a class="link link-hover">About Us</a>
+            <a class="link link-hover">Cases</a>
+            <a class="link link-hover">Blog</a>
+            <a class="link link-hover">Contact us</a>
+          </nav>
+          <nav class="text-[#cfcfcf] text-base poppins mr-5">
+            <h6
+              class="text-xl font-extrabold text-white mb-12 eb-garamond pr-6"
+            >
+              Contact Now
+            </h6>
+            <a class="link link-hover"
+              >555 4th 5t NW, Washington <br />
+              DC 20530, United States</a
+            >
+            <a class="link link-hover"
+              >+88 01750 000 000 <br />
+              +88 01750 000 000</a
+            >
+            <a class="link link-hover"
+              >info@gmail.com <br />
+              info@gmail.com</a
+            >
+          </nav>
+          <form class="text-[#cfcfcf] text-base poppins">
+            <h6 class="text-xl font-extrabold text-white mb-12 eb-garamond">
+              Subscribe
+            </h6>
+            <fieldset class="w-80">
+              <label
+                >Subscribe for our latest & <br />
+                Articles. We Won’t Give You <br />
+                Spam Mails</label
+              >
+              <div class="join mt-6">
+                <input
+                  type="text"
+                  placeholder="Email Address"
+                  class="input input-bordered join-item poppins text-[#A0A0A0]"
+                />
+                <button
+                  class="btn border-none shadow-none bg-[#B68C5A] join-item"
+                >
+                  <i class="fa-solid fa-paper-plane"></i>
+                </button>
+              </div>
+            </fieldset>
+          </form>
+        </footer>
+      </section>
+    </footer>
   </body>
 </html>
